css changes - fix paragraph spacing in movies and switch blog to a darker theme

--- a/.source/content/css/movie-reviews.css
+++ b/.source/content/css/movie-reviews.css
@@ -125,6 +125,9 @@
 .movie .link {
     float: right;
 }
+.movie p {
+    margin-bottom: 0;
+}
 /* end each movie box section */
 
 .some-star {
