--- a/.source/themes/thematrix/static/css/thematrix.css
+++ b/.source/themes/thematrix/static/css/thematrix.css
@@ -360,7 +360,8 @@ a.brand, a.brand:hover {
 .side-bar {
     margin-top: 10px;
     padding: 10px 0 3px 0;
-    background-color: #2b2b2b;/*dark-grey*/
+    background-color: #0b0b0b;/*very-dark-grey*/
+    border: 1px solid #1a1a1a;/*light-grey*/
     border-radius: 4px;
 }
 .side-bar a.brand {
@@ -378,7 +379,8 @@ a.brand, a.brand:hover {
     left: 0;
     right: 0;
     z-index: 2;
-    background-color: #2b2b2b;/*dark-grey*/
+    background-color: #0b0b0b;/*very-dark-grey*/
+    border: 1px solid #1a1a1a;/*light-grey*/
 }
 .top-bar .logo-container {
     padding-left: 10px;
@@ -501,7 +503,8 @@ h4:hover .icon-chain-90, h5:hover .icon-chain-90, h6:hover .icon-chain-90 {
 .info-box {
     padding: 15px;
     margin-bottom: 20px;
-    background-color: #2b2b2b;/*dark-grey*/
+    background-color: #0b0b0b;/*very-dark-grey*/
+    border: 1px solid #1a1a1a;/*light-grey*/
     border-radius: 4px;
     line-height: 24px;
 }
@@ -614,7 +617,7 @@ ul.taglist li {
 }
 
 blockquote {
-    background-color: #101010;/*very-dark-grey*/
+    background-color: #0b0b0b;/*very-dark-grey*/
     display: inline-block;
     margin: 0;
     padding: 0 30px 0 30px;
